--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a href="https://green-route.appspot.com/">
               <figure class="portfolio__item">
                 <img
-                  src="../assets/portfolio/green-route.png"
+                  src="./assets/portfolio/green-route.png"
                   class="img img-fluid portfolio__thumbnail"
                 />
                 <figcaption>
@@ -103,7 +103,7 @@
             <a href="https://kevinboxugao.github.io/Calculator/">
               <figure class="portfolio__item">
                 <img
-                  src="../assets/portfolio/react-calculator.png"
+                  src="./assets/portfolio/react-calculator.png"
                   class="img img-fluid portfolio__thumbnail"
                 />
                 <figcaption>
@@ -117,7 +117,7 @@
             <a href="https://spentweb.appspot.com/">
               <figure class="portfolio__item">
                 <img
-                  src="../assets/portfolio/spent-web.png"
+                  src="./assets/portfolio/spent-web.png"
                   class="img img-fluid portfolio__thumbnail"
                 />
                 <figcaption>
@@ -131,7 +131,7 @@
             <a href="https://expo.io/@kevinboxugao/SockMatch">
               <figure class="portfolio__item">
                 <img
-                  src="../assets/portfolio/sock-match.png"
+                  src="./assets/portfolio/sock-match.png"
                   class="img img-fluid portfolio__thumbnail"
                 />
                 <figcaption>
@@ -156,8 +156,8 @@
           <div class="portfolio__links col">
             <ul class="links d-flex flex-row justify-content-center">
               <li class="text-center">
-                <a href="../assets/KevinGaoResume.pdf"
-                  ><img class="link__icon" src="../assets/icons/file-solid.svg"
+                <a href="./assets/KevinGaoResume.pdf"
+                  ><img class="link__icon" src="./assets/icons/file-solid.svg"
                 /></a>
                 <p>Resume</p>
               </li>
@@ -165,7 +165,7 @@
                 <a href="https://www.linkedin.com/in/kevin-gao-1b8777186"
                   ><img
                     class="link__icon"
-                    src="../assets/icons/github-brands.svg"
+                    src="./assets/icons/github-brands.svg"
                 /></a>
                 <p>Github</p>
               </li>
@@ -173,7 +173,7 @@
                 <a href="https://github.com/KevinBoxuGao"
                   ><img
                     class="link__icon"
-                    src="../assets/icons/linkedin-in-brands.svg"
+                    src="./assets/icons/linkedin-in-brands.svg"
                 /></a>
                 <p>LinkedIn</p>
               </li>
