--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <link href="index.css?67dcd97608607edbacd0" rel="stylesheet" />
-    <!-- Start Single Page Apps for GitHub Pages -->
+  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?980a009864bdaeb726d8" rel="stylesheet">
+  <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
@@ -27,40 +26,26 @@
       // When the single page app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
       // the single page app to route accordingly.
-      (function (l) {
+      (function(l) {
         if (l.search) {
           var q = {};
-          l.search
-            .slice(1)
-            .split("&")
-            .forEach(function (v) {
-              var a = v.split("=");
-              q[a[0]] = a.slice(1).join("=").replace(/~and~/g, "&");
-            });
+          l.search.slice(1).split('&').forEach(function(v) {
+            var a = v.split('=');
+            q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+          });
           if (q.p !== undefined) {
-            window.history.replaceState(
-              null,
-              null,
-              l.pathname.slice(0, -1) +
-                (q.p || "") +
-                (q.q ? "?" + q.q : "") +
-                l.hash
+            window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + (q.p || '') +
+              (q.q ? ('?' + q.q) : '') +
+              l.hash
             );
           }
         }
-      })(window.location);
+      }(window.location))
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
     <div id="root"></div>
-    <script
-      type="text/javascript"
-      src="vendor.bundle.js?67dcd97608607edbacd0"
-    ></script>
-    <script
-      type="text/javascript"
-      src="index.bundle.js?67dcd97608607edbacd0"
-    ></script>
-  </body>
+  <script type="text/javascript" src="vendor.bundle.js?980a009864bdaeb726d8"></script><script type="text/javascript" src="index.bundle.js?980a009864bdaeb726d8"></script></body>
 </html>
