--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="Kevin Gao's Personal Portfolio Website, showcasing projects, my qualifications, and ways to contact me."
     />
     <title>Kevin Gao Web Developer</title>
     <!--Fonts-->
@@ -24,20 +28,26 @@
       // When the single page app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
       // the single page app to route accordingly.
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
+      (function (l) {
+        if (l.search[1] === "/") {
+          var decoded = l.search
+            .slice(1)
+            .split("&")
+            .map(function (s) {
+              return s.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            l.pathname.slice(0, -1) + decoded + l.hash
           );
         }
-      }(window.location))
+      })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?360e14e6a6dda5903aa4" rel="stylesheet"></head>
+  <link rel="shortcut icon" href="favicon.ico"><link href="index.css?e896f890dd7c8fa21566" rel="stylesheet"></head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="vendor.bundle.js?360e14e6a6dda5903aa4"></script><script type="text/javascript" src="index.bundle.js?360e14e6a6dda5903aa4"></script></body>
+  <script type="text/javascript" src="vendor.bundle.js?e896f890dd7c8fa21566"></script><script type="text/javascript" src="index.bundle.js?e896f890dd7c8fa21566"></script></body>
 </html>
